[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-adk-project"
version = "0.1.0"
description = "Google ADK agent with Google AI Studio integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.0.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_adk_project"]
